# filter-rs

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  release.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: common.rs  discrete_bayes.rs  gh.rs  lib.rs  stats.rs
src/kalman/: kalman_filter.rs  mod.rs
src/moving_averages/: mod.rs  regular.rs
