[package]
name = "filter"
version = "0.1.1-dev"
authors = ["Michael Mauderer <michael@michaelmauderer.com>"]
edition = "2018"
repository = "https://github.com/MichaelMauderer/filter-rs"
license = "MIT"
readme = "README.md"
description = "Kalman filters and other optimal and non-optimal estimation filters in Rust."

categories = ["algorithms", "science", "no-std"]
keywords = ["filters", "kalman", "signal-processing"]

[dependencies]
nalgebra = { version = "0.18", default-features = false }
num-traits = "0.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[features]
default = ["alloc"]
alloc = []
